--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.11",
-    "@mui/material": "^5.14.11",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "^5.14.11",
     "@stripe/stripe-js": "^3.0.4",
     "@testing-library/jest-dom": "^5.17.0",
@@ -23,6 +23,7 @@
     "custom-react-inner-image-zoom": "^3.0.6",
     "firebase": "^10.7.0",
     "next": "14.2.3",
+    "next-router-mock": "^0.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-image-zoom": "^1.3.1",
